k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: udemy-backend
spec:
  selector:
    app: udemy-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 6001
  type: ClusterIP
